--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -30,7 +33,7 @@
                     </div>
                 </div>
                 <div class="address">
-                    <h3>Shipping adress</h3>
+                    <h3>Shipping address</h3>
                     <label for="name">Full name</label>
                     <div class="campo">
                         <input type="text" name="name" id="name" placeholder="Enter your name..." />
@@ -38,13 +41,13 @@
                     </div>
 
                     <label for="address">Adress</label>
-                    <div class="compo">
+                    <div class="campo">
                         <input type="text" name="adress" id="adress" placeholder="Enter your address..." />
                         <i class="fa-solid fa-house"></i>
                     </div>
 
                     <label for="city">City</label>
-                    <div class="compo">
+                    <div class="campo">
                         <input type="text" name="city" id="city" placeholder="Enter your city..." />
                         <i class="fa-solid fa-city"></i>
                     </div>
@@ -54,7 +57,7 @@
                     <div class="country">
                         <label for="country">Country</label>
 
-                        <div>
+                        <div class="campo">
                             <select name="country" id="country">
                                 <option value="Turkey">Turkey</option>
                                 <option value="Germany">Germany</option>
@@ -62,13 +65,13 @@
                                 <option value="Canada">Canada</option>
                                 <option value="UK">UK</option>
                             </select>
-                            <i class="fa-regular fa-earth-europe"></i>
+                            <i class="fa-solid fa-earth-europe"></i>
                         </div>
                     </div>
 
                     <div class="postcode">
                         <label for="postCode">Post Code</label>
-                        <div>
+                        <div class="campo">
                             <input type="number" name="postCode" id="postCode" placeholder="Enter your post code..." />
                             <i class="fa-solid fa-envelopes-bulk"></i>
                         </div>
