--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                     <h3>Contact information</h3>
                     <label for="email">Email</label>
                     <div class="campo">
-                        <input type="email" name="email" id="email" placeholder="Enter your email.." />
+                        <input type="email" name="email" id="email" placeholder="Enter your email.." required />
                         <i class="fa-solid fa-envelope"></i>
                     </div>
                     <label for="phone">Phone</label>
                     <div class="campo">
-                        <input type="tel" name="phone" id="phone" placeholder="Enter your phone..." />
+                        <input type="tel" name="phone" id="phone" placeholder="Enter your phone..." required />
                         <i class="fa-solid fa-phone"></i>
                     </div>
                 </div>
@@ -35,19 +35,19 @@
                     <h3>Shipping address</h3>
                     <label for="name">Full name</label>
                     <div class="campo">
-                        <input type="text" name="name" id="name" placeholder="Enter your name..." />
+                        <input type="text" name="name" id="name" placeholder="Enter your name..." required />
                         <i class="fa-solid fa-user"></i>
                     </div>
 
                     <label for="address">Adress</label>
                     <div class="campo">
-                        <input type="text" name="adress" id="adress" placeholder="Enter your address..." />
+                        <input type="text" name="adress" id="adress" placeholder="Enter your address..." required />
                         <i class="fa-solid fa-house"></i>
                     </div>
 
                     <label for="city">City</label>
                     <div class="campo">
-                        <input type="text" name="city" id="city" placeholder="Enter your city..." />
+                        <input type="text" name="city" id="city" placeholder="Enter your city..." required />
                         <i class="fa-solid fa-city"></i>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                         <label for="country">Country</label>
 
                         <div class="campo">
-                            <select name="country" id="country">
+                            <select name="country" id="country" required>
                                 <option value="Turkey">Turkey</option>
                                 <option value="Germany">Germany</option>
                                 <option value="USA">USA</option>
@@ -71,7 +71,8 @@
                     <div class="postcode">
                         <label for="postCode">Post Code</label>
                         <div class="campo">
-                            <input type="text" name="postCode" id="postCode" placeholder="Enter your post code..." />
+                            <input type="text" name="postCode" id="postCode" placeholder="Enter your post code..."
+                                required />
                             <i class="fa-solid fa-envelopes-bulk"></i>
                         </div>
                     </div>
